maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:55: error: not found: type int
  var bagglePos = new Array[int](2)
                            ^